ingress/kubeapps/discourse/discourse-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: discourse
  namespace: discourse
spec:
#   tls:
#   - hosts:
#     - lope.test
#     secretName: lope-tls-secret
  rules:
  - host: discourse.lope.test
    http:
      paths:
      - path: /
        backend:
          serviceName: statuesque-comb-discourse
          servicePort: 80
